k8s/templates/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gs-inv-prod
  labels:
    app.kubernetes.io/name: gs-inv-mgmt
    app.kubernetes.io/part-of: goldenstackers
    env: prod
