k8s/templates/prod/deployment-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gs-inv-app
  labels:
    app.kubernetes.io/name: gs-inv-mgmt
    app.kubernetes.io/component: app
    env: prod
spec:
  replicas: 3
  revisionHistoryLimit: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: gs-inv-app
  template:
    metadata:
      labels:
        app: gs-inv-app
        app.kubernetes.io/name: gs-inv-mgmt
        app.kubernetes.io/component: app
        env: prod
    spec:
      containers:
        - name: app
          image: ghcr.io/goldenstackers/gs-inv-mgmt:stable
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8501
              name: http
          volumeMounts:
            - name: media-data
              mountPath: /var/gs-inv/media
            - name: backups-data
              mountPath: /var/gs-inv/backups
          readinessProbe:
            httpGet:
              path: /_stcore/health
              port: 8501
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /_stcore/health
              port: 8501
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: "2"
              memory: 3Gi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 10001
            runAsGroup: 10001
      securityContext:
        fsGroup: 10001
      volumes:
        - name: media-data
          persistentVolumeClaim:
            claimName: gs-inv-media-pvc
        - name: backups-data
          persistentVolumeClaim:
            claimName: gs-inv-backups-pvc
